--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                     <a href="https://github.com/SHAFIsar" class="footer-link">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/mohamed-shafi-4b242b254/" class="footer-link">
+                    <a href="https://www.linkedin.com/in/mohamed-shafi-196078283?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="footer-link">
                         <i class="fab fa-linkedin"></i>
                     </a>
                     <a href="mailto:mohamedshafi3775@gmail.com" class="footer-link">
